--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "das",
+  "name": "githubPage",
   "version": "0.1.0",
+  "homepage": "https://github.com/TIC-Templet/githubPage",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+	"predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^2.5.17"
@@ -17,6 +20,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "gh-pages": "^2.0.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
