--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "githubPage",
   "version": "0.1.0",
-  "homepage": "https://github.com/TIC-Templet/githubPage",
+  "homepage": "https://tic-templet.github.io/githubPage/.",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
 	"predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^2.5.17"
